# xnavsegda

./: .gitignore  README.md  configure.ac
src/: Makefile.am  artnavsegda.h  xchota.c  xhello.c  xliban.c  xlibstdin.c
